# robots

./: .flake8  .gitignore  AGENTS.md  AUTONOMOUS_TASKS.md  BENCHMARKS.md  CONTRIBUTING.md  NOTEBOOKS.md  README.md  STATE.md  TASK.md  TASKS.md  TESTING.md  mkdocs.yml  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  pr-and-push.yml  test-integ.yml  test-lint.yml
artifacts/: quickstart.cast
benchmarks/: README.md  _memray_target.py  bench_core.py  bench_groot.py  bench_lerobot.py  run_all.py  test_bench.py
benchmarks/results/: .gitignore
benchmarks/results_ec2/: bench_core_20260321_213615.json  bench_lerobot_20260321_213644.json  bench_lerobot_20260321_213644_inference.csv  bench_lerobot_20260321_213644_trace.json  core_profile.prof  core_speedscope.json  memray_flamegraph.html  memray_table.html
benchmarks/results_macbook/: .gitignore  bench_core_20260321_172704.json  bench_core_20260321_172811.json  core_profile.prof  core_speedscope.json  memray_flamegraph.html  memray_table.html
docs/: api-reference.md  architecture.md  ci-strategy.md  contributing.md  index.md  learning-path.md  recording.md  troubleshooting.md
docs/assets/: interface_test_output.txt
docs/design/: ELIMINATE_FRAGILE_MAPPING.md
docs/examples/: overview.md
docs/getting-started/: installation.md  quickstart.md  robot-factory.md
docs/hardware/: robot-control.md  tools.md
docs/policies/: custom-policies.md  gear-sonic.md  groot.md  lerobot-local.md  overview.md
docs/robots/: arms.md  bimanual.md  hands.md  humanoids.md  index.md  mobile.md
docs/simulation/: domain-randomization.md  gymnasium-env.md  overview.md  world-building.md
docs/stylesheets/: extra.css
docs/training/: overview.md
docs/tutorial/: 01-your-first-robot.md  02-simulation.md  03-policies.md  04-agents.md  05-multi-robot.md  06-recording.md  07-training.md  08-real-hardware.md  09-advanced.md  index.md
examples/: 01_sim_quickstart.py  02_sim_agent.py  03_sim_recording.py  04_real_hardware.py  05_real_groot_policy.py  06_list_robots.py  act_policy_simulation.py  physics_agent.py
notebooks/: 01_getting_started.ipynb  02_policy_abstraction.ipynb  03_groot_policy.ipynb  04_lerobot_local.ipynb  05_mujoco_simulation.ipynb  06_sim_policy_and_recording.ipynb  07_robot_agent_tool.ipynb  08_registry_and_models.ipynb
research/: CROSS_DEPENDENCY_AST_RESEARCH.md  E2E_DEVX_FLOW_RESEARCH.md  LEROBOT_050_FIX.md  LEROBOT_050_FIX.patch  LEROBOT_MIGRATION_RESEARCH.md  PROPOSAL_RESEARCH.md  cross_dependency_ast_results.json  lerobot_signature_validation.json
samples/: README.md
samples/01_hello_robot/: README.md  hello_robot.py  try_all_robots.py
samples/02_policy_playground/: README.md  anatomy_of_a_policy.py  compare_policies.py  custom_policy.py  policy_playground.py
samples/03_build_a_world/: .gitignore  README.md  build_world.py  domain_randomization.py  marble_world.py
samples/04_gymnasium_training/: README.md  custom_reward.py  evaluate.py  gym_basics.py  train_ppo.py
samples/05_data_collection/: README.md  inspect_dataset.py  push_to_hub.py  record_episodes.py  record_with_recorder.py
samples/06_raytraced_training/: README.md  benchmark.py  isaac_sim_setup.py  newton_parallel.py  thor_isaac_tandem.py  train_isaac_lab.py
samples/07_groot_finetuning/: README.md  data_config_explorer.py  download_checkpoint.py  evaluate_policy.py  finetune_groot.py  inference_demo.py
samples/08_sim_to_real/: README.md  __init__.py  cosmos_transfer.py  deploy_to_hardware.py  safety_wrapper.py  train_on_transferred.py
samples/09_multi_robot_fleet/: README.md  __init__.py  device_connect_bridge.py  emergency_stop.py  fleet_orchestration.py  live_stream.py  zenoh_mesh_demo.py
samples/10_autonomous_repo_casestudy/: ANALYSIS_REPORT.md  ARCHITECTURE.md  EVOLUTION_TIMELINE.md  README.md  agent_patterns.py  analyze_commits.py  analyze_repo.py  architecture_diagram.py  evolution_timeline.py  workflow_analyzer.py
scripts/: collect_hf_pick_place.py  eval_harness.py  generate_isaac_dataset.py  generate_isaac_test_dataset.py  generate_plots.py  generate_qa_dataset.py  generate_test_dataset.py  generate_videos.py  isaac_articulated_training.py  isaac_dataset_exporter.py  isaac_pick_place_50env.py  isaac_pick_place_train.py  newton_benchmark.py  pick_and_place_kitchen.py  record_so101_pick_place.py  render_all_robots.py  scripted_pick_demo.py  setup-thor-runner.sh  stereo4d_full_pipeline.py  test_groot_n16_fruit_picking.py  validate_dataset.py
scripts/newton/: PIPELINE.md  collection_summary.json  dataset_info.json  floor_is_lava_results.json  g1_floor_is_lava.py  load_room_isaac.py  pipeline.py
scripts/training/: train_cosmos.py  (+6 more)
strands_robots/: __init__.py  _async_utils.py  dataset_recorder.py  envs.py  factory.py  gym_env.py  hardware_robot.py  kinematics.py  leisaac.py  mesh_session.py  motion_library.py  policy_resolver.py  processor.py  record.py  rl_trainer.py  robometer.py  robot.py  simulation.py  simulation_backend.py  utils.py  video.py  visualizer.py  zenoh_mesh.py
tests/: conftest.py  test_agent_tools.py  test_agibot_data_config.py  test_asset_converter.py  test_assets.py  test_audit_def.py  test_collect_hf_pick_place.py  test_core_coverage.py  test_cosmos_transfer.py  test_cosmos_transfer_trainer.py  test_cosmos_visualizer_deep.py  test_cross_deps.py  test_dashboard_serve.py  test_data_pipeline.py  test_dataset_recorder.py  test_download_assets.py  test_dreamgen.py  test_dreamgen_policy.py  test_dreamzero.py  test_e2e_training.py  test_envs.py  test_factory.py  test_go1_policy.py  test_gr00t_inference.py  test_groot_comprehensive.py  test_groot_finetune_e2e.py  test_headless_rendering.py  test_inference.py  test_init.py  test_isaac_gym_env.py  test_isaac_sim_bridge.py  test_isaac_sim_tool.py  test_kinematics.py  test_kitchen_stereo4d.py  test_lazy_imports.py  test_leisaac.py  test_lerobot_async.py  test_lerobot_calibrate.py  test_lerobot_calibrate_coverage.py  test_lerobot_camera.py  (+78 more)
tests_e2e/: test_lerobot_e2e.py
thor_tests/: README.md
(+222 files in other folders)
